// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ButtonGroup /> should render a justified ButtonGroup 1`] = `
<div
  className="nice-btn-group justified"
>
  <Button
    alternative={false}
    className=""
    context="default"
    disabled={false}
    href="#"
    icon={null}
    onClick={null}
    pullRight={false}
    size="medium"
    style={null}
    submit={false}
  >
    Some
  </Button>
  <Button
    alternative={false}
    className=""
    context="default"
    disabled={false}
    href="#"
    icon={null}
    onClick={null}
    pullRight={false}
    size="medium"
    style={null}
    submit={false}
  >
    Justified
  </Button>
  <Button
    alternative={false}
    className=""
    context="default"
    disabled={false}
    href="#"
    icon={null}
    onClick={null}
    pullRight={false}
    size="medium"
    style={null}
    submit={false}
  >
    Buttons
  </Button>
</div>
`;

exports[`<ButtonGroup /> should render a small ButtonGroup 1`] = `
<div
  className="nice-btn-group"
>
  <Button
    alternative={false}
    className=""
    context="default"
    disabled={false}
    href={null}
    icon={null}
    onClick={null}
    pullRight={false}
    size="medium"
    style={null}
    submit={false}
  >
    Some
  </Button>
  <Button
    alternative={false}
    className=""
    context="default"
    disabled={false}
    href={null}
    icon={null}
    onClick={null}
    pullRight={false}
    size="medium"
    style={null}
    submit={false}
  >
    Stacked
  </Button>
  <Button
    alternative={false}
    className=""
    context="default"
    disabled={false}
    href={null}
    icon={null}
    onClick={null}
    pullRight={false}
    size="medium"
    style={null}
    submit={false}
  >
    Buttons
  </Button>
</div>
`;

exports[`<ButtonGroup /> should render a stacked ButtonGroup 1`] = `
<div
  className="nice-btn-group stacked"
>
  <Button
    alternative={false}
    className=""
    context="default"
    disabled={false}
    href={null}
    icon={null}
    onClick={null}
    pullRight={false}
    size="medium"
    style={null}
    submit={false}
  >
    Some
  </Button>
  <Button
    alternative={false}
    className=""
    context="default"
    disabled={false}
    href={null}
    icon={null}
    onClick={null}
    pullRight={false}
    size="medium"
    style={null}
    submit={false}
  >
    Stacked
  </Button>
  <Button
    alternative={false}
    className=""
    context="default"
    disabled={false}
    href={null}
    icon={null}
    onClick={null}
    pullRight={false}
    size="medium"
    style={null}
    submit={false}
  >
    Buttons
  </Button>
</div>
`;

exports[`<ButtonGroup /> should render the Buttons inside ButtonGroup 1`] = `
<div
  className="nice-btn-group"
>
  <Button
    alternative={false}
    className=""
    context="default"
    disabled={false}
    href={null}
    icon={null}
    onClick={null}
    pullRight={false}
    size="medium"
    style={null}
    submit={false}
  >
    Button 1
  </Button>
  <Button
    alternative={false}
    className=""
    context="default"
    disabled={false}
    href={null}
    icon={null}
    onClick={null}
    pullRight={false}
    size="medium"
    style={null}
    submit={false}
  >
    Button 2
  </Button>
</div>
`;
